agressive word-break in the caption (fixes #3)

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -78,6 +78,8 @@ h3 {
   p {
     font-size: $fs * 0.8;
     line-height: $line * 0.666666666;
+    word-break: break-all;
+    @extend .hyphenator;
   }
 }
 
